--- a/public/labs/EditProfile_files/navigation.css
+++ b/public/labs/EditProfile_files/navigation.css
@@ -3,6 +3,8 @@
 /* Kanbas Navigation */
 .wd-kanbas-navigation {
     width: 85px;
+    padding-left: 0px; 
+    padding-top: 0px;
 }
 
 .wd-kanbas-navigation .list-group-item {
