a4 State and Redux fa23

--- a/src/Kanbas/Courses/Assignments/index.css
+++ b/src/Kanbas/Courses/Assignments/index.css
@@ -87,3 +87,11 @@ h2{
   .edit-header{
     margin-top: 40px;
   }
+
+  .delete-button{
+    margin-left: 50px;
+  }
+
+  .yes-button{
+    margin-left: 20px;
+  }
